Issue-917 Adding additional podcasts

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -209,6 +209,9 @@
         <ul class="list-unstyled">
           <li><a href="https://emberweekend.com/episodes">Ember Weekend</a></li>
           <li><a href="https://embermap.com/podcast">Ember Map Podcast</a></li>
+          <li><a href="https://podcasts.apple.com/de/podcast/the-ember-report/id1554053161">The Ember Report?</a></li>
+          <li><a href="https://www.whiskeywebandwhatnot.fm">Whiskey Web and Whatnot</a></li>
+          <li><a href="https://podcasts.apple.com/ie/podcast/fizz-buzz-podcast/id1611982323">Fizz Buzz</a></li>
         </ul>
       </EsCard>
 
